<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_settings_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/account_settings"
        android:visible="false" />
    <item
        android:id="@+id/main_search_btn"
        android:title="@string/search" />
    <item
        android:id="@+id/main_create_group_chat"
        android:title="@string/create_group" />

    <item
        android:id="@+id/main_create_topic_btn"
        android:title="@string/create_topic" />
    <item
        android:id="@+id/main_create_bomb_btn"
        android:title="Create Timed Chat"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"></item>
    <item
        android:id="@+id/main_bombarchive_menu_btn"
        android:title="View Archived Bombs"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider" />
    <item
        android:id="@+id/main_logout_btn"
        android:title="@string/log_out" />

</menu>