<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BombCreationActivity">

    <TextView
        android:id="@+id/create_bomb_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="27dp"
        android:text="Create a New Bomb"
        android:textColor="@color/colorAccent"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button_create_bomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="126dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:text="@string/create"
        android:textColor="#ffffff" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_bomb_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/create_bomb_textview2"
        android:layout_marginTop="54dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="315dp"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <CalendarView
        android:id="@+id/startCalendar"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_create_bomb"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <CalendarView
        android:id="@+id/endCalendar"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_create_bomb"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/create_bomb_textview2"
        android:layout_alignTop="@+id/button_create_bomb"
        android:background="@color/colorPrimaryDark"
        android:text="@string/set_start"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/enddate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_create_bomb"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/set_end"
        android:textColor="#ffffff" />

</RelativeLayout>